--- a/package.json
+++ b/package.json
@@ -18,5 +18,9 @@
   "license": "CC0-1.0",
   "devDependencies": {
     "electron": "^9.1.0"
+  },
+  "dependencies": {
+    "electron-reload": "^1.5.0",
+    "sass": "^1.26.10"
   }
 }
