--- a/package.json
+++ b/package.json
@@ -21,6 +21,10 @@
   },
   "dependencies": {
     "electron-reload": "^1.5.0",
+    "is-image": "^3.0.0",
+    "move-file": "^2.0.0",
+    "open": "^7.0.4",
+    "open-file-explorer": "^1.0.2",
     "sass": "^1.26.10"
   }
 }
