--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,8 @@
 node_modules
 photo-sorter-darwin-x64
+Photo Sorter-darwin-x64
 photo-sorter-darwin-x64.zip
-photo-sorter-darwin-x64.zip
+Photo Sorter-darwin-x64.zip
+Photo Sorter-win32-x64
+Photo Sorter-win32-x64.zip
+
