--- a/package.json
+++ b/package.json
@@ -1,13 +1,12 @@
 {
   "name": "photo-sorter",
-  "version": "1.0.0",
+  "version": "1.3.0",
   "description": "A Electron app to sort good and bad photo's in a Tinder-like way",
   "main": "main.js",
-  "type": "module",
   "scripts": {
-    "start": "electron .",
-    "packageMacOS": "electron-packager . 'Photo Sorter'",
-    "packageWin32": "electron-packager . 'Photo Sorter' --platform=win32 --arch=x64 --win32metadata.CompanyName=lennertDeRyck --win32metadata.ProductName=PhotoSorter  --win32metadata.FileDescription=PhotoSorter --win32metadata.OriginalFilename=PhotoSorter.exe --win32metadata.InternalName=photoSorter"
+    "start": "electron . 'Photo Sorter' --icon=static/images/favicon.icns",
+    "packageMacOS": "electron-packager . 'Photo Sorter' --icon=static/images/favicon.icns --overwrite",
+    "packageWin32": "electron-packager . 'Photo Sorter' --icon=static/images/favicon.ico --overwrite --platform=win32 --arch=x64 --win32metadata.CompanyName=lennertDeRyck --win32metadata.ProductName=PhotoSorter  --win32metadata.FileDescription=PhotoSorter --win32metadata.OriginalFilename=PhotoSorter.exe --win32metadata.InternalName=photoSorter"
   },
   "repository": "https://github.com/lennertderyck/photo-sorter",
   "keywords": [
