--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "photo-sorter",
-  "version": "1.3.0",
-  "description": "A Electron app to sort good and bad photo's in a Tinder-like way",
+  "version": "1.3.1",
+  "description": "An Electron app to sort good and bad photo's in a Tinder-like way",
   "main": "main.js",
   "scripts": {
     "start": "electron . 'Photo Sorter' --icon=static/images/favicon.icns",
