--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "photo-sorter",
-  "version": "1.3.1",
+  "version": "1.4.0",
   "description": "An Electron app to sort good and bad photo's in a Tinder-like way",
   "main": "main.js",
   "scripts": {
-    "start": "electron . 'Photo Sorter' --icon=static/images/favicon.icns",
+    "start": "electron . 'Photo Sorter' --icon=static/images/favicon.icns & npm run sass",
     "sass": "sass --watch _sass/main.scss:static/css/main.min.css --style compressed",
     "packageMacOS": "electron-packager . 'Photo Sorter' --icon=static/images/favicon.icns --overwrite",
     "packageWin32": "electron-packager . 'Photo Sorter' --icon=static/images/favicon.ico --overwrite --platform=win32 --arch=x64 --win32metadata.CompanyName=lennertDeRyck --win32metadata.ProductName=PhotoSorter  --win32metadata.FileDescription=PhotoSorter --win32metadata.OriginalFilename=PhotoSorter.exe --win32metadata.InternalName=photoSorter"
@@ -25,6 +25,7 @@
   },
   "dependencies": {
     "check-os": "^1.0.1",
+    "cutleryjs": "^2.2.0",
     "electron-reload": "^1.5.0",
     "is-image": "^3.0.0",
     "move-file": "^2.0.0",
